[#noissue] Fix deprecated API
[#noissue] deprecated